# advent2023

aplenty/: aplenty.cabal
aplenty/src/: Main.hs  Parser.hs
camel-cards/: camel-cards.cabal
camel-cards/src/: Main.hs
clumsy-crucible/: clumsy-crucible.cabal
clumsy-crucible/src/: Main.hs  Vector2D.hs
cosmic-expansion/: cosmic-expansion.cabal
cosmic-expansion/src/: Main.hs
cube-conundrum/: cube-conundrum.cabal  package.yaml
cube-conundrum/app/: Main.hs
fertilizer/: fertilizer.cabal
fertilizer/src/: Main.hs
gear-ratios/: gear-ratios.cabal  package.yaml
gear-ratios/app/: Main.hs
haunted-wasteland/: haunted-wasteland.cabal
haunted-wasteland/src/: Main.hs
hot-springs/: hot-springs.cabal
hot-springs/src/: Main.hs
lavaduct-lagoon/: lavaduct-lagoon.cabal
lavaduct-lagoon/src/: Main.hs  Vector2D.hs
lens-library/: lens-library.cabal
lens-library/src/: Main.hs
long-walk/: long-walk.cabal
long-walk/src/: Main.hs
mirage-maintenance/: mirage-maintenance.cabal
mirage-maintenance/src/: Main.hs
never-tell-me-the-odds/: never-tell-me-the-odds.cabal
never-tell-me-the-odds/src/: Main.hs
parabolic-reflector-dish/: parabolic-reflector-dish.cabal
parabolic-reflector-dish/src/: Main.hs
pipe-maze/: pipe-maze.cabal
pipe-maze/src/: Main.hs
point-of-incidence/: point-of-incidence.cabal
point-of-incidence/src/: Main.hs
pulse-propagation/: pulse-propagation.cabal
pulse-propagation/src/: Main.hs
sand-slabs/: sand-slabs.cabal
sand-slabs/src/: Main.hs  Vector3D.hs
scratch-cards/: scratch-cards.cabal
scratch-cards/src/: Main.hs
step-counter/: step-counter.cabal
step-counter/src/: Main.hs  Vector2D.hs
the-floor-will-be-lava/: the-floor-will-be-lava.cabal
the-floor-will-be-lava/src/: Main.hs
trebuchet/: stack.yaml  trebuchet.cabal
trebuchet/src/: Main.hs
wait-for-it/: wait-for-it.cabal
wait-for-it/src/: Main.hs
