cabal-version:       2.2

name:                never-tell-me-the-odds
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/never-tell-me-the-odds#readme
license:             BSD-3-Clause
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple

executable never-tell-me-the-odds
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Vector2D, Vector3D
  build-depends:       base >= 4.7 && < 5, MissingH, vector
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
