cabal-version:       2.2

name:                point-of-incidence
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/point-of-incidence#readme
license:             BSD-3-Clause
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple

executable point-of-incidence
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, MissingH, split
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
