cabal-version:       2.2

name:                pulse-propagation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pulse-propagation#readme
license:             BSD-3-Clause
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple

executable pulse-propagation
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, MissingH, vector
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
